<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#E2E1E1"
    android:layout_height="match_parent"
    tools:context=".Home">
    <com.denzcoskun.imageslider.ImageSlider
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="200dp"

        app:iss_auto_cycle="true"
        app:iss_delay="0"
        app:iss_period="1000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />


    <TextView
        android:textSize="50dp"
        android:textColor="#0F0E0E"
        android:id="@+id/textb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintEnd_toEndOf="parent"/>
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"

    android:text="@string/enter_your_number_phone"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/textb"
    android:layout_marginTop="10dp"
    android:layout_marginStart="5dp"
    android:id="@+id/textname"
    android:textColor="#050505"/>

    <EditText
        android:id="@+id/number"
        android:hint="@string/enter_your_number_phone1"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textname" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/number"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:textColor="#070707"
        android:id="@+id/textpass"/>
    <EditText
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:inputType="number"
        android:hint="@string/enter_your_password1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textpass"
        android:layout_marginTop="12dp"
        android:layout_marginStart="10dp"
        android:id="@+id/password"/>
    <Button
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/login"
        android:background="@drawable/stile"
        android:textColor="#F7F4F2"
        android:textSize="30dp"
        android:id="@+id/login"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/usern"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@drawable/stilebtn"
        android:text="@string/login1"
        android:textColor="#F7F4F2"
        android:textSize="30dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/logo"
        app:layout_constraintVertical_bias="0.679" />
</androidx.constraintlayout.widget.ConstraintLayout>