<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_page"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".UserPage">

    <com.denzcoskun.imageslider.ImageSlider
        android:id="@+id/image_slider"
        android:layout_width="match_parent"
        android:layout_height="200dp"

        app:iss_auto_cycle="true"
        app:iss_delay="0"
        app:iss_period="1000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:elevation="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toBottomOf="@id/image_slider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/backprofile"
        android:padding="10dp"
        android:id="@+id/c55">
        <TextView
            android:id="@+id/information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="معلومات الحساب"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textStyle="bold"
            android:textColor="#FFD504"/>
    <TextView
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/information"        android:id="@+id/n"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:padding="5dp"
        android:text="@string/name"
        android:textColor="#000000"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="210dp"
        tools:ignore="MissingConstraints" />

    <TextView
app:layout_constraintTop_toBottomOf="@id/information"        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_1sdp"
        android:text="ahmed adel mohamed elarby"
        android:textColor="#FDFAFA"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintStart_toEndOf="@id/n"
        tools:ignore="MissingConstraints" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_card"
        android:textColor="#000000"
        android:layout_marginStart="10dp"
        android:textStyle="bold"
        android:padding="5dp"
        app:layout_constraintTop_toBottomOf="@id/c"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/nuc"
        android:textSize="@dimen/_15sdp"/>
    <TextView
        android:id="@+id/nc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="893859839459"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_1sdp"
        app:layout_constraintStart_toEndOf="@id/nuc"
        app:layout_constraintTop_toBottomOf="@id/case1"
        android:padding="3dp"
        android:textSize="@dimen/_15sdp"
        android:textColor="#FDFAFA"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/case1"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/n"
        android:textSize="@dimen/_15sdp"
        android:id="@+id/c"
        android:textColor="#000000"
        android:layout_marginStart="10dp"
        android:padding="5dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Active"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/c"
        app:layout_constraintTop_toBottomOf="@id/name"
        android:textSize="@dimen/_15sdp"
        android:textColor="#FDFCFC"
        android:padding="5dp"
        android:layout_marginTop="@dimen/_1sdp"
        android:layout_marginStart="5dp"
        android:id="@+id/case1"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type_starting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nuc"
        android:padding="5dp"
        android:textStyle="bold"
        android:textSize="@dimen/_15sdp"
        android:textColor="#050609"
        android:layout_marginStart="10dp"
        android:id="@+id/ty"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="3/3/3333"
        android:layout_marginTop="@dimen/_1sdp"
        app:layout_constraintStart_toEndOf="@id/ty"
        app:layout_constraintTop_toBottomOf="@id/nc"
        android:textSize="@dimen/_15sdp"
        android:textColor="#FCFCFC"
        android:textStyle="bold"
        android:id="@+id/typeStarting"
        android:padding="5dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type_end"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ty"
        android:padding="5dp"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"
        android:textColor="#030307"
        android:layout_marginStart="10dp"
        android:id="@+id/typeend"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="3/3/3333"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_1sdp"
        app:layout_constraintStart_toEndOf="@id/typeend"
        app:layout_constraintTop_toBottomOf="@id/typeStarting"
        android:textSize="@dimen/_15sdp"
        android:textColor="#FDFCFC"
        android:id="@+id/typeend1"
        android:padding="2dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:background="#80D3E7E8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/oll"
        android:layout_marginTop="15dp"
        android:textSize="20dp"
        android:padding="5dp"
        android:textColor="#030302"
        android:id="@+id/day"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/c55" />

    <ProgressBar
        android:rotation="360"

        android:progress="90"

        android:mirrorForRtl="true"
        android:indeterminateOnly="false"
        android:progressDrawable="@drawable/circel"
        android:id="@+id/progressBar2"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/day" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_100"
        android:textSize="20sp"
        android:id="@+id/numday"
        app:layout_constraintBottom_toBottomOf="@+id/progressBar2"
        app:layout_constraintEnd_toEndOf="@+id/progressBar2"
        app:layout_constraintStart_toStartOf="@+id/progressBar2"
        app:layout_constraintTop_toTopOf="@+id/progressBar2" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="@dimen/_5sdp"
        android:orientation="horizontal"
        android:padding="@dimen/_1sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/_5sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar2"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:paddingStart="@dimen/_2sdp"
            android:paddingEnd="@dimen/_2sdp"
            android:background="@drawable/stilebtn"
            android:text="@string/callme"
            android:textColor="#FFFFFF"

            android:textStyle="bold" />

        <Button
            android:id="@+id/callme"
            android:paddingStart="@dimen/_2sdp"
            android:paddingEnd="@dimen/_2sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/stilebtn"
            android:text="@string/callme1"
            android:textColor="#F8F8F7"
            android:textStyle="bold" />

        <Button
            android:id="@+id/sinout"
            android:paddingStart="@dimen/_2sdp"
            android:paddingEnd="@dimen/_2sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/stilebtn"
            android:text="تسجيل الخروج"
            android:textColor="#F8F8F7"
            android:textSize="15dp"
            android:textStyle="bold" />


    </LinearLayout>

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="تحديث"
    android:textColor="#050303"
    app:layout_constraintStart_toEndOf="@id/progressBar2"
    app:layout_constraintTop_toBottomOf="@id/day"
    android:layout_marginTop="45dp"
    android:layout_marginStart="5dp"
    android:id="@+id/update"/>



</androidx.constraintlayout.widget.ConstraintLayout>